// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metadata helper should compile 1`] = `
"---
id: \\"xyz\\"
title: \\"xyx's \\\\\\"quoted\\\\\\" title\\"
sidebar_label: \\"\\"xyx's \\\\\\"quoted\\\\\\" title\\\\\\"\\"
---
"
`;

exports[`metadata helper should escape strings that start with an @ 1`] = `
"---
id: \\"xyz\\"
title: \\"@scoped/package's \\\\\\"quoted\\\\\\" title\\"
sidebar_label: \\"\\"@scoped/package's \\\\\\"quoted\\\\\\" title\\\\\\"\\"
---
"
`;
